# base64

./: .gitignore  CMakeLists.txt  README.md  base64.c  base64_test.c  main.c
.github/workflows/: cmake.yml
cmake/: base64-config.cmake
include/base64/: base64.h
